# traffy-troffi

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
docker/dagster/: Dockerfile  dagster.yaml  workspace.yaml
docker/garage/: garage.toml
docker/postgres/: 01-create-database.sh
notebooks/: data_overview.ipynb  demo_repo.ipynb  spark_create_table.ipynb  spark_district.ipynb  spark_ml_predict.ipynb  spark_process.ipynb  spark_query.ipynb  spark_upload_s3.ipynb  traffy_dagster.ipynb
public/:  traffic_congress.csv  bangkok_district.csv  dim_district.csv  dim_subdistrict.csv  fact_accident.csv  fact_death.csv  fact_district.csv  fact_green.csv  fact_pm.csv  fact_traffic.csv  fact_traffy.csv  fact_vehicle.csv  fact_waste.csv  main.ipynb  more_traffy_fondue.csv  traffic_congress.csv  vehicle_accident_2566.csv
spark-warehouse/traffy_fondue_unpredicted/: .part-00000-1fb56dab-1ea8-4b1d-a553-f20b799e75be-c000.snappy.parquet.crc  part-00000-1fb56dab-1ea8-4b1d-a553-f20b799e75be-c000.snappy.parquet
spark-warehouse/traffy_fondue_unpredicted_temp/: .part-00000-8566d951-c62c-4ebc-9de5-25368c14c2c5-c000.snappy.parquet.crc  part-00000-8566d951-c62c-4ebc-9de5-25368c14c2c5-c000.snappy.parquet
spark-warehouse/traffy_fondue_untagged/: .part-00000-e8a1bf96-18ae-45cb-96c0-039703b653a5-c000.snappy.parquet.crc  part-00000-e8a1bf96-18ae-45cb-96c0-039703b653a5-c000.snappy.parquet
traffy-troffi/: __init__.py  app.py
traffy-troffi/dagster/: __init__.py  traffy_geojson.py
traffy-troffi/data/: traffy_geojson.py
traffy-troffi/dbt/: definitions.py  traffy_fondue.py
traffy-troffi/dbt/fondue_pipelines/: __init__.py  create_traffy_fondue_table.py  process_complaint_traffy_fondue.py
traffy-troffi/dbt/stream_pipeline/: __init__.py  create_unpredicted_table.py  (+3 more)
traffy-troffi/dlt/: __init__.py  definitions.py  traffy_fondue.py  traffy_geojson.py  traffy_ml.py  traffy_process_raw.py  traffy_web_scrap.py
traffy-troffi/resource/: s3.py
traffy-troffi/resources/: api.py  gdrive.py  postgres.py  s3.py  spark.py
