[project]
name = "traffy-troffi"
version = "0.0.1"
description = ""
authors = [{ name = "Thanapat Chotipun", email = "devpatrick.cho@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "dagster (>=1.10.13,<2.0.0)",
    "dagster-webserver (>=1.10.13,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "boto3 (>=1.38.8,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
tqdm = "^4.67.1"
poetry-core = "^2.1.3"
python-dotenv = "^1.1.0"

[tool.dagster]
module_name = "traffy-troffi"
code_location_name = "traffy-troffi"